--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -23,8 +23,7 @@
             <h3>Allotted Time: 10 minutes | Difficulty Level: Beginner | 5 questions</h3>
         </header>
         <main>
-            
-
+            <p>Hello world!</p>
         </main>
         <footer>
 
