Added list and foundational styles

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -5,15 +5,21 @@
         <link rel="icon" sizes="16x16 32x32" href="https://combo.staticflickr.com/pw/favicon.ico">
         <meta charset="UTF-8">
         <meta name="description" content="Absolute Relative File Path worksheet">
-        <meta name="keywords" content="Absolute File Path, Relative File Path, Web Dev Worksheet">
-        <meta name="author" content="C.Fulton">
+        <meta name="keywords" content="Leylines, ROBLOX, Fantasy">
+        <meta name="author" content="Leo Lee">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--Extenal Link - External CSS-->
         <link href="css/style.css" rel="stylesheet" type="text/css">
         <!--Internal CSS (Page Specific)-->
         <style>
+            body{
+                margin: auto;
+            }
+            header{
+                width: 1000px;
 
+            }
         </style>
     </head>
     <body> <!-- Everything that gets visually rendered.-->
@@ -23,7 +29,12 @@
             <h3>Allotted Time: 10 minutes | Difficulty Level: Beginner | 5 questions</h3>
         </header>
         <main>
-            <p>Hello world!</p>
+            <p>Website Goals:</p>
+            <ol>
+                <li>Provide intuitive navigation to various content.</li>
+                <li>Promote its message effectively.</li>
+                <li>Look and run smoothly.</li>
+            </ol>
         </main>
         <footer>
 
