--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html> <!--Version of HTML - and standards to comply to-->
 <html><!--Root Tag-->
     <head> <!-- Communicates Meta Data-->
-        <title>Absolute Relative File Paths Worksheet</title>
+        <title>Project's Website Foundation</title>
         <link rel="icon" sizes="16x16 32x32" href="https://combo.staticflickr.com/pw/favicon.ico">
         <meta charset="UTF-8">
-        <meta name="description" content="Absolute Relative File Path worksheet">
+        <meta name="description" content="The gameplan of the website, of how it will be made and the goals it will strive to achieve.">
         <meta name="keywords" content="Leylines, ROBLOX, Fantasy">
         <meta name="author" content="Leo Lee">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,19 +22,24 @@
             }
         </style>
     </head>
-    <body> <!-- Everything that gets visually rendered.-->
+    <body>
         <header>
-            <h2>Introduction to Web Development Series</h2>
-            <h2>Utilizing and Understanding Relative and Absolute File Paths </h2>
-            <h3>Allotted Time: 10 minutes | Difficulty Level: Beginner | 5 questions</h3>
+            <h1>Leylines: The Awakening</h1>
         </header>
         <main>
-            <p>Website Goals:</p>
-            <ol>
-                <li>Provide intuitive navigation to various content.</li>
-                <li>Promote its message effectively.</li>
-                <li>Look and run smoothly.</li>
-            </ol>
+            <section>
+                <h2>Mission Statement</h2>
+                <p>The mission of this website is to establish and track systems that will be used in the game.</p>
+                <h2>Website Goals:</h2>
+                <ol>
+                    <li>Provide intuitive navigation to all of its content.</li>
+                    <li>Allow future developers to easily digest the content for easier integration into the overall process(es).</li>
+                    <li>Make the website .</li>
+                </ol>
+            </section>
+            <section>
+                <h2>Projected Pages/Sections</h2>
+            </section>
         </main>
         <footer>
 
