Added Projected Pages/Sections section

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -39,6 +39,19 @@
             </section>
             <section>
                 <h2>Projected Pages/Sections</h2>
+                <div>
+                    <h3>Scripted Systems</h3>
+                    <p>This page will contain the list of all systems that are in the game. From here, you can navigate to each system for more information on their functionalities.</p>
+                    <h4></h4>
+                </div>
+                <div>
+                    <h3>Configuration</h3>
+                    <p>This page will contain guides to how every configurable object can be changed, alongside the formatting of their configuration (if applicable). This is the most vital part of this website and the game.</p>
+                </div>
+                <div>
+                    <h3>Modelling Standards</h3>
+                    <p>This page will contain specifications and requirements for how things should be modeled. Guides and recommendations to modeling can be found here, too.</p>
+                </div>
             </section>
         </main>
         <footer>
