Added Target Audience section.

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -30,6 +30,8 @@
             <section>
                 <h2>Mission Statement</h2>
                 <p>The mission of this website is to establish and track systems that will be used in the game.</p>
+                <h2>Target Audience</h2>
+                <p>This website is made for the developers working on the project in order to promote uniformity within the whole process. Developers are assumed to have knowledge in the overall roblox development jargon and terms in their respective field. If the audience were to come to this website, they would be looking for resources on how they would accomplish a task or how a present system works.</p>
                 <h2>Website Goals:</h2>
                 <ol>
                     <li>Provide intuitive navigation to all of its content.</li>
