--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -40,6 +40,15 @@
                 </div>
             </section>
             <section>
+                <h2>Website Being Used as a Model</h2>
+                <div>
+                    <img src="img/Model.PNG" alt="Roblox Developer Wiki article image">
+                </div>
+                <div>
+                    <p></p>
+                </div>
+            </section>
+            <section>
                 <h2>Projected Pages/Sections</h2>
                 <div>
                     <h3>Scripted Systems</h3>
