--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -42,10 +42,12 @@
             <section>
                 <h2>Website Being Used as a Model</h2>
                 <div>
-                    <img src="img/Model.PNG" alt="Roblox Developer Wiki article image">
+                    <a href="https://developer.roblox.com/en-us/api-reference/class/HttpService">
+                        <img src="img/Model.PNG" alt="Roblox Developer Wiki article image" \>
+                    </a>
                 </div>
                 <div>
-                    <p></p>
+                    <p>For the site that this site will be based on, I picked the ROBLOX wiki articles. The reason for this is they provide a good separation between each category of documentation, and further intuitive design that allows users to quickly find what they're looking for. </p>
                 </div>
             </section>
             <section>
