Finished caption and goals

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -35,7 +35,7 @@
                     <ol>
                         <li>Provide intuitive navigation to all of its content.</li>
                         <li>Allow future developers to easily digest the content for easier integration into the overall process(es).</li>
-                        <li>Make the website .</li>
+                        <li>Allow developers to easily add more pages with templates.</li>
                     </ol>
                 </div>
             </section>
@@ -47,7 +47,7 @@
                     </a>
                 </div>
                 <div>
-                    <p>For the site that this site will be based on, I picked the ROBLOX wiki articles. The reason for this is they provide a good separation between each category of documentation, and further intuitive design that allows users to quickly find what they're looking for. </p>
+                    <p>For the site that this site will be based on, I picked the ROBLOX wiki articles. The reason for this is they provide a good separation between each category of documentation, and further intuitive design that allows users to quickly find what they're looking for. Plus, the uniformity of the site allows its audience to interpret the content quicker every visit.</p>
                 </div>
             </section>
             <section>
