Added sub-pages to the scripted systems page

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -55,7 +55,14 @@
                 <div>
                     <h3>Scripted Systems</h3>
                     <p>This page will contain the list of all systems that are in the game. From here, you can navigate to each system for more information on their functionalities.</p>
-                    <h4></h4>
+                    <div>
+                        <h4>Client Systems</h4>
+                        <p>This page will contain the list of systems that are only found on a player's client. From here, you can navigate to each system for more information on their functionalities.</p>
+                    </div>
+                    <div>
+                        <h4>Server Systems</h4>
+                        <p>This page will contain the list of systems that are only found in the ServerScriptService. From here, you can navigate to each system for more information on their functionalities.</p>
+                    </div>
                 </div>
                 <div>
                     <h3>Configuration</h3>
