--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> <!--Version of HTML - and standards to comply to-->
-<html><!--Root Tag-->
+<html lang="en-us"><!--Root Tag-->
     <head> <!-- Communicates Meta Data-->
         <title>Project's Website Foundation</title>
         <link rel="icon" sizes="16x16 32x32" href="https://combo.staticflickr.com/pw/favicon.ico">
