Fixed formatting error as per W3

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -43,7 +43,7 @@
                 <h2>Website Being Used as a Model</h2>
                 <div>
                     <a href="https://developer.roblox.com/en-us/api-reference/class/HttpService">
-                        <img src="img/Model.PNG" alt="Roblox Developer Wiki article image" \>
+                        <img src="img/Model.PNG" alt="Roblox Developer Wiki article image">
                     </a>
                 </div>
                 <div>
