--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -18,29 +18,29 @@
     </head>
     <body>
         <header>
-            <h1>Leylines: The Awakening</h1>
+            <h1></h1>
         </header>
         <main>
             <section>
                 <div>
                     <h2>Mission Statement</h2>
-                    <p>The mission of this website is to establish and track systems that will be used in the game.</p>
+                    <p>The mission of this website is to display the achievements I've obtained in my pursuit of obtaining a sucessful Software Engineer life.</p>
                 </div>
                 <div>
                     <h2>Target Audience</h2>
-                    <p>This website is made for the developers working on the project in order to promote uniformity within the whole process. Developers are assumed to have knowledge in the overall roblox development jargon and terms in their respective field. If the audience were to come to this website, they would be looking for resources on how they would accomplish a task or how a present system works.</p>
+                    <p>This website is primarily targetted towards job recruiters, however may attract people who are generally interested in my activities.</p>
                 </div>
                 <div>
                     <h2>Website Goals:</h2>
                     <ol>
-                        <li>Provide intuitive navigation to all of its content.</li>
-                        <li>Allow future developers to easily digest the content for easier integration into the overall process(es).</li>
-                        <li>Allow developers to easily add more pages with templates.</li>
+                        <li>Provide the primary audience with a comprehensive outline of what I've done and what I can offer.</li>
+                        <li>Provide the secondary audience with a method of exploring my projects/activites.</li>
+                        <li>Allow the primary audience to follow up with me.</li>
                     </ol>
                 </div>
             </section>
             <section>
-                <h2>Website Being Used as a Model</h2>
+                <!--<h2>Website Being Used as a Model</h2>
                 <div>
                     <a href="https://developer.roblox.com/en-us/api-reference/class/HttpService">
                         <img src="img/Model.PNG" alt="Roblox Developer Wiki article image">
@@ -48,13 +48,13 @@
                 </div>
                 <div>
                     <p>For the site that this site will be based on, I picked the ROBLOX wiki articles. The reason for this is they provide a good separation between each category of documentation, and further intuitive design that allows users to quickly find what they're looking for. Plus, the uniformity of the site allows its audience to interpret the content quicker every visit.</p>
-                </div>
+                </div>-->
             </section>
             <section>
                 <h2>Projected Pages/Sections</h2>
                 <div>
-                    <h3>Scripted Systems</h3>
-                    <p>This page will contain the list of all systems that are in the game. From here, you can navigate to each system for more information on their functionalities.</p>
+                    <h3>General Overview</h3>
+                    <!--<p>This page will contain the list of all systems that are in the game. From here, you can navigate to each system for more information on their functionalities.</p>
                     <div>
                         <h4>Client Systems</h4>
                         <p>This page will contain the list of systems that are only found on a player's client. From here, you can navigate to each system for more information on their functionalities.</p>
@@ -62,15 +62,18 @@
                     <div>
                         <h4>Server Systems</h4>
                         <p>This page will contain the list of systems that are only found in the ServerScriptService. From here, you can navigate to each system for more information on their functionalities.</p>
-                    </div>
+                    </div>-->
                 </div>
                 <div>
-                    <h3>Configuration</h3>
-                    <p>This page will contain guides to how every configurable object can be changed, alongside the formatting of their configuration (if applicable). This is the most vital part of this website and the game.</p>
-                </div>
+                    <h3>Finished Projects</h3>
+                    <!--<p>This page will contain guides to how every configurable object can be changed, alongside the formatting of their configuration (if applicable). This is the most vital part of this website and the game.</p>
+                --></div>
                 <div>
-                    <h3>Modelling Standards</h3>
-                    <p>This page will contain specifications and requirements for how things should be modeled. Guides and recommendations to modeling can be found here, too.</p>
+                    <h3>Current Projects</h3>
+                    <!--<p>This page will contain specifications and requirements for how things should be modeled. Guides and recommendations to modeling can be found here, too.</p>
+                --></div>
+                <div>
+                    <h3>Other</h3>
                 </div>
             </section>
         </main>
