Changed plan for a new goal

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html> <!--Version of HTML - and standards to comply to-->
 <html lang="en-us"><!--Root Tag-->
     <head> <!-- Communicates Meta Data-->
-        <title>Project's Website Foundation</title>
+        <title>Leo's Website Plan</title>
         <link rel="icon" sizes="16x16 32x32" href="https://combo.staticflickr.com/pw/favicon.ico">
         <meta charset="UTF-8">
-        <meta name="description" content="The gameplan of the website, of how it will be made and the goals it will strive to achieve.">
-        <meta name="keywords" content="Leylines, ROBLOX, Fantasy">
+        <meta name="description" content="The gameplan of my personal portfolio website, of how it will be made and the goals it will strive to achieve.">
+        <meta name="keywords" content="Leo Lee, SkilledSniper1, Software Developer, Portfolio, Blog">
         <meta name="author" content="Leo Lee">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -40,40 +40,53 @@
                 </div>
             </section>
             <section>
-                <!--<h2>Website Being Used as a Model</h2>
+                <h2>Website Being Used as a Model</h2>
                 <div>
-                    <a href="https://developer.roblox.com/en-us/api-reference/class/HttpService">
+                    <a href="http://findmatthew.com/">
                         <img src="img/Model.PNG" alt="Roblox Developer Wiki article image">
                     </a>
                 </div>
                 <div>
-                    <p>For the site that this site will be based on, I picked the ROBLOX wiki articles. The reason for this is they provide a good separation between each category of documentation, and further intuitive design that allows users to quickly find what they're looking for. Plus, the uniformity of the site allows its audience to interpret the content quicker every visit.</p>
-                </div>-->
+                    <p>For the site that this site will be based on, I picked the Matthew Williams' work portfolio. The reason for this is they provide a visually appealing website that presents their talent in a smooth and intuitive manner, similar to Apple products.</p>
+                </div>
             </section>
             <section>
                 <h2>Projected Pages/Sections</h2>
                 <div>
-                    <h3>General Overview</h3>
-                    <!--<p>This page will contain the list of all systems that are in the game. From here, you can navigate to each system for more information on their functionalities.</p>
-                    <div>
-                        <h4>Client Systems</h4>
-                        <p>This page will contain the list of systems that are only found on a player's client. From here, you can navigate to each system for more information on their functionalities.</p>
-                    </div>
-                    <div>
-                        <h4>Server Systems</h4>
-                        <p>This page will contain the list of systems that are only found in the ServerScriptService. From here, you can navigate to each system for more information on their functionalities.</p>
-                    </div>-->
+                    <h3>Opening Page/Section</h3>
+                    <p>
+                        This section will consist of an introductory section to lure in the audience into learning more about me. It'll contain an animation, and perhaps a gif of some of my content in the background.
+                    </p>
                 </div>
                 <div>
-                    <h3>Finished Projects</h3>
-                    <!--<p>This page will contain guides to how every configurable object can be changed, alongside the formatting of their configuration (if applicable). This is the most vital part of this website and the game.</p>
-                --></div>
+                    <h3>About Me</h3>
+                    <p>
+                        This section will contain information about me, including my bio, ideals, and general skills.
+                    </p>
+                </div>
                 <div>
-                    <h3>Current Projects</h3>
-                    <!--<p>This page will contain specifications and requirements for how things should be modeled. Guides and recommendations to modeling can be found here, too.</p>
-                --></div>
+                    <h3>Portfolio</h3>
+                    <p>
+                        This section will contain my finished and current projects. They will be divided into sub-sections.
+                    </p>
+                    <h4>
+                        Finished Projects
+                    </h4>
+                    <p>
+                        A small section that links and provides a summary of projects I've participated and finished.
+                    </p>
+                    <h4>
+                        Current Projects
+                    </h4>
+                    <p>
+                        A small section that provides a summary of the current projects I'm currently working on, and more information if permitted by my contractors.
+                    </p>
+                </div>
                 <div>
-                    <h3>Other</h3>
+                    <h3>Contact Me</h3>
+                    <p>
+                        A section that'll allow the audience to contact me for more information. An easy alternative if I can't establish this is links to my social media (i.e. Linked In).
+                    </p>
                 </div>
             </section>
         </main>
